--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "contributes": {
     "commands": [
       {
-        "command": "page-create-by-template.helloWorld",
-        "title": "Hello World"
+        "command": "page-create-by-template",
+        "title": "通过模板快速创建页面"
       }
     ]
   },
@@ -46,8 +46,6 @@
     "eslint": "^9.25.1",
     "npm-run-all": "^4.1.5",
     "typescript": "^5.8.3"
-  },
-  "dependencies": {
-    "vscode": "^1.1.37"
   }
+
 }
