--- a/package.json
+++ b/package.json
@@ -18,7 +18,15 @@
         "command": "page-create-by-template",
         "title": "通过模板快速创建页面"
       }
-    ]
+    ],
+    "menus": {
+      "explorer/context": [
+        {
+          "command": "page-create-by-template",
+          "group": "page-create-by-template"
+        }
+      ]
+    }
   },
   "scripts": {
     "vscode:prepublish": "pnpm run package",
@@ -46,6 +54,9 @@
     "eslint": "^9.25.1",
     "npm-run-all": "^4.1.5",
     "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "download-git-repo": "^3.0.2",
+    "electron": "^37.2.6"
   }
-
 }
