--- a/package.json
+++ b/package.json
@@ -56,8 +56,7 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "axios": "^1.11.0",
-    "download-git-repo": "^3.0.2",
-    "electron": "^37.2.6"
+    "axios": "^1.11.0"
+
   }
 }
